Fix text-overflow not being applied to author column

--- a/imports/ui/cardsetCourseIterations/results.scss
+++ b/imports/ui/cardsetCourseIterations/results.scss
@@ -79,6 +79,10 @@
   padding-right: 30px !important;
 }
 
+.authorProfile {
+  padding-right: 0;
+}
+
 .resultBadge {
   position: absolute;
   float: right;
